fix images visibility on sides

--- a/style.css
+++ b/style.css
@@ -259,7 +259,6 @@ a {
 /* #region = 5.image details */
 
 .wrapper-container-details {
-  width: 100%;
   height: 100%;
   min-height: 320px;
   display: flex;
@@ -269,7 +268,8 @@ a {
 }
 
 .container-details {
-  min-width: 1700px;
+  min-width: 1720px;
+  width: 100%;
 
   display: flex;
   justify-content: space-between;
